Fix flex wrap

--- a/assets/css/3-sections/_projects.sass
+++ b/assets/css/3-sections/_projects.sass
@@ -7,6 +7,7 @@
 .project-holder
   display: flex
   justify-content: center
+  flex-wrap: wrap
 .project
   width: 400px
   height: 200px
